# st_pipeline

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL  LICENSE  LOG  MANIFEST.in  README.md  README_SHORT  README_SHORT.md  TODO  index.html  index.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tasks.py  testrun.py  tox.ini  versions.json  workflow_extended.pfd
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dev.yml  doc.yml  docker-image.yml
2.0.0.dev/: 404.html  index.html  sitemap.xml
2.0.0.dev/api/: index.html
2.0.0.dev/changelog/: index.html
2.0.0.dev/contributing/: index.html
2.0.0.dev/installation/: index.html
2.0.0.dev/search/: search_index.json
2.0.0.dev/usage/: index.html
2.1.0.dev/: 404.html  index.html  sitemap.xml
2.1.0.dev/api/: index.html
2.1.0.dev/changelog/: index.html
2.1.0.dev/contributing/: index.html
2.1.0.dev/installation/: index.html
2.1.0.dev/search/: search_index.json
2.1.0.dev/usage/: index.html
data/: MOB_REP4_log.txt  MOB_REP9_log.txt  README.md
dependencies/findIndexes/: CMakeLists.txt  findIndexes.cpp  findIndexesOld.cpp  kmerFinder.h
dependencies/findIndexes/include/: util.h
doc/: .buildinfo  Makefile  changes.rst  conf.py  contact.rst  example.rst  index.rst  installation.rst  intro.rst  license.rst  manual.rst  modules.rst  stpipeline.common.rst  stpipeline.core.rst  stpipeline.lib.rst  stpipeline.rst
doc/.doctrees/: environment.pickle  index.doctree
doc_out/: .buildinfo  changes.html  contact.html  example.html  genindex.html  index.html  installation.html  intro.html  license.html  manual.html  objects.inv  search.html  searchindex.js
doc_out/.doctrees/: changes.doctree  contact.doctree  environment.pickle  example.doctree  index.doctree  installation.doctree  intro.doctree  license.doctree  manual.doctree
doc_out/_sources/: changes.txt  contact.txt  example.txt  installation.txt  intro.txt  license.txt  manual.txt
doc_out/_static/: classic.css
docs/: .buildinfo  api.md  changes.html  changes.rst  conf.py  contact.html  example.html  genindex.html  index.html  installation.html  installation.md  intro.html  license.html  manual.html  objects.inv  search.html  searchindex.js  usage.md
docs/.doctrees/: environment.pickle  index.doctree  installation.doctree  license.doctree
docs/_sources/: changes.rst.txt  example.rst.txt  index.rst.txt  installation.rst.txt  intro.rst.txt  manual.rst.txt
docs/_static/: classic.css  documentation_options.js  sidebar.js
docsrc/: Makefile  changes.rst  conf.py  example.rst  installation.rst  intro.rst  license.rst  manual.rst
ids/: 1000L2_barcodes.txt  1000L3_barcodes.txt  1000L5_barcodes.txt  1000L6_barcodes.txt  1000L7_barcodes.txt  1000L8_barcodes.txt  1000L9_barcodes.txt  Bulk_barcodes.txt  LCM_barcodes.txt
pairReadsHadoop/: .classpath
pairReadsHadoop/src/common/: AbstractSamMapping.java  AbstractTaggedMapping.java  AlignFlags.java  AlignOp.java  BamInputFormat.java  BwaRefAnnotation.java  ClusterUtils.java  ConfigFileParser.java  ContextAdapter.java  CutString.java  CutText.java  FormatException.java  FormatNameMap.java  GroupByLocationComparator.java  IMRContext.java  LineReader.java  MdOp.java  OutputStreamFactory.java  ReadPair.java  SamInputFormat.java  SealToolParser.java  SealToolRunner.java  SequenceId.java  SequenceIdLocationPartitioner.java  TestContext.java  TextSamMapping.java  (+3 more)
pipeline/: .gitignore  AUTHORS  DEPENDENCIES  HADOOP  INSTALL  INSTALL_UPPMAX  LICENSE  LOG  README  TODO  setup.py  tasks.py
pipeline/analysis/: README.txt  analyser2.py  barcode_demultiplxer_functions.py  barcode_distance_stat.py  demultiplxer_evaluator.py  synthetic_data_generator.py  utillities.py
pipeline/deprecated/: common.py  config.py  hadoopMonitor.py  hadut.py  mapper.py  merge_json.py  monitor.py  reducer.py  run.py  stpipeline.py
pipeline/main/: __init__.py  version.py
pipeline/scripts/: barcode_demultiplxer_functions.py  computeRegionTable.py  convertEnsemblToNames.py  countClusters.py  countMolecularBarcodes.py  createDataset.py  fastq_adjuster.py  filterCountTable.py  filterEntries.py  filterSTData.py  formatToTable.py  generateStats.py  ids_to_fasta.py  json2scatter.py  merge_json.py  molecular_barcodes.py  processClusters.py  reformatBarcodesJSON.py  removeDuplicates.py  sam_to_ids.py  stDataPlotter.py  st_pipeline_emr_combiner.py  st_pipeline_emr_mapper.py  st_pipeline_emr_mrjob_run.py  st_pipeline_emr_reducer.py  st_pipeline_run.py
pipeline/stpipeline/: __init__.py  version.py
pipeline/test/: README.txt  test_class.py
pipeline/tests/: README.txt  adaptors_test.py  clustering_test.py  fastq_utils_test.py  pipeline_bowtie2_test.py  pipeline_run_test.py  pipeline_star_test.py  pipeline_test.py
pipeline/utils/: bootstrap.sh  mrjob.conf
scripts/: adjust_matrix_coordinates.py  convertEnsemblToNames.py  countMolecularBarcodes.py  createDataset.py  filter_gene_type_matrix.py  merge_bcl.py  merge_fastq.py  merge_json.py  multi_qa.py  st_pipeline_run.py  st_qa.py
stpipeline/: conf.py  index.rst  version.py
stpipeline/common/: adaptors.py  cdistance.c  cdistance.pyx  clustering.py  dataset.py  distance.py  fastq_utils.py  filter.py  filterInputReads.pyx  gff_reader.py  json_utils.py  sam_utils.py  saturation.py  stats.py  transcript.py  unique_events_parser.py  unique_events_parser.pyx  utils.py
stpipeline/core/: annotation.py  mapping.py  pipeline.py
stpipeline/scripts/: adjust_matrix_coordinates.py  convertEnsemblToNames.py  filter_gene_type_matrix.py  merge_fastq.py  multi_qa.py  st_pipeline_run.py  st_qa.py
test_data/: README.md  REP7_log.txt
tests/: README.txt  adaptors_test.py  annotation_test.py  clustering_test.py  dataset_test.py  fastq_utils_test.py  filter_test.py  gff_reader_test.py  integration_test.py  mapping_test.py  pipeline_run_test.py  sam_utils_test.py  saturation_test.py  stats_test.py  unique_events_parser_test.py  utils_test.py
(+41 files in other folders)
